language switch done

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,4 +1,103 @@
 {
-    "Language":"Language",
-    "English_US":"English (US)"
+    "Language":"لغة",
+    "English_US":"الإنجليزية (الولايات المتحدة)",
+    "arabic": "عربي",
+    "next": "التالي",
+    "login": "تسجيل الدخول",
+     "signUp": "اشتراك",
+     "forgotPassword": "هل نسيت كلمة السر؟",
+     "enterYourEmail": "أدخل بريدك الإلكتروني",
+    "welcomeToFitopia": "مرحبا بكم في فيتوبيا",
+    "enterYourPassword": "ادخل رقمك السري",
+    "dontHaveAnAccount": "ليس لديك حساب؟",
+    "SENDCODE" : "أرسل الكود",
+      "forgotyourPassword" : "نسيت كلمة السر؟",
+      "forgotPasswordDes" :
+         "أدخل عنوان بريدك الإلكتروني وسنرسل لك رمزًا لإعادة تعيين كلمة مرورك.",
+      "nextC" : "التالي",
+      "enterCode" : "ادخل الرمز",
+      "resendCode" : "أعد إرسال الرمز؟",
+      "enter6digitcode" :
+         "أدخل الرمز المكون من 6 أرقام المرسل إلى بريدك الإلكتروني",
+      "newPassword" : "كلمة المرور الجديدة",
+      "changePassword" : "تغيير كلمة المرور",
+      "confirmPassword" : "تأكيد كلمة المرور",
+      "enterNewpassword" : "أدخل كلمة المرور الجديدة",
+      "typePasswordAgainConfirm" :
+         "اكتب كلمة المرور مرة أخرى للتأكيد",    
+    "w4Title" : "يعيش",
+    "w2Title" : "يدرب",
+    "w1Title" : "مركز",
+    "w3Title" : "يأكل",
+  "start7dayFreeTrail" : "ابدأ تجربة مجانية لمدة 7 أيام",
+  "w1Description" :
+     "تدريب وتناول الطعام والعيش بشكل أفضل مع فريق Fitopia",
+  "w2Description" :
+     "تدرب مع مدربين عالميين. HIIT والملاكمة والبيلاتس وبناء العضلات والمزيد للمنزل أو صالة الألعاب الرياضية",
+  "w3Description" :
+     "خطط وجبات سهلة وصحية ستحبها. خيارات نباتية ونباتية وخالية من الغلوتين.",
+  "w4Description" :
+     "اليقظة لتهدئة الفوضى. تأملات وتصورات للنوم ونصائح عملية.",
+  "enterEmailAndPassword" :
+     "يرجى تسجيل الدخول باستخدام بريدك الإلكتروني وكلمة المرور وتحسين جسدك معنا",
+     "signIn" : "تسجيل الدخول",
+     "contine" : "يكمل",
+     "createAnAccount" : "إنشاء حساب",
+     "whatsYourEmail" : "ما هو بريدك الإلكتروني",
+     "alreadyHaveanAccount" : "هل لديك حساب؟",
+     "sendmeEmailFitopiaTeam" :
+        "أرسل لي رسائل بريد إلكتروني بها تحديثات من",
+     "back" : "خلف",
+     "enterPassword" : "أدخل كلمة المرور",
+     "ChoosePassword" : "اختر كلمة مرور",
+     "passwordValidation" :
+        "8-30 حرفًا ، حرف واحد كبير وصغير ورقم واحد",
+     "WhatsYourName" : "ما اسمك؟",
+     "FirstName" : "الاسم الأول",
+     "LastName" : "اسم العائلة",
+     "CREATEACCOUNT" : "إنشاء حساب",
+     "privacyPlicy" :
+        "من خلال إنشاء حساب ، أوافق على Fitopia",
+     "Rs" : "روبية",
+       "off" : "عن",
+       "Standard" : "معيار",
+       "Ieateverything" : "أنا آكل كل شيء",
+       "Vegan" : "نباتي",
+       "month" : "شهر",
+       "Beginner" : "مبتدئ",
+       "advanced" : "متقدم",
+       "Leanbulk" : "كتلة هزيلة",
+       "Gainweight" : "يزداد وزن",
+       "monthsRs" : "أشهر روبية",
+       "loseWeight" : "فقدان الوزن",
+       "buildMuscle" : "بناء العضلات",
+       "Intermediate" : "متوسط",
+       "getFitToned" : "احصل على لياقتك ومنغم",
+       "whatsyourgoal" : "ما هو هدفك؟",
+       "yourFirst7DaysareFree" : "أول 7 أيام لك مجانًا.",
+       "Sedentary" : "كَسُول",
+       "Veryactive" : "نشيط جدا",
+       "LightlyActive" : "نشط طفيفة",
+       "Extremelyactive" : "نشط للغاية",
+       "ModeratelyActive" : "نشط بشكل معتدل",
+       "egDeskJob" : "على سبيل المثال وظيفة مكتبية ، وممارسة رسمية قليلة",
+       "egAthleteIn" : "على سبيل المثال رياضي في تدريب التحمل أو عمل بدني صعب للغاية",
+       "egDlightdaily" : "على سبيل المثال نشاط يومي خفيف وتمارين خفيفة 1-3 أيام في الأسبوع",
+       "egmoderatedaily" : "على سبيل المثال نشاط يومي معتدل وممارسة معتدلة / شاقة 4-5 أيام في الأسبوع",
+       "egphysicallydemanding" : "على سبيل المثال أسلوب حياة يتطلب جهدًا بدنيًا وممارسة التمارين الشاقة 6-7 أيام في الأسبوع",
+      "male" : "ذكر",
+      "female" : "أنثى",
+     "Howactiveareyou" : "كيف نشطة أنت؟",
+     "WhatGenderdoyouidentifyas" : "ما هو الجنس الذي تعرفه؟",
+     "ThiswillBeUsedToCalculateThe" : "سيتم استخدام هذا لحساب القيمة الصحيحة للعناصر الغذائية لخطة وجباتك",
+     "WhatAreYourDietaryrequirements" : "ما هي متطلباتك الغذائية؟",
+     "WhatGenderdoYouidentityAs" : "ما هو الجنس الذي تعرفه؟",
+     "ThiswillUsedToCalculateMealplan" : "سيتم استخدام هذا لحساب القيمة الصحيحة للعناصر الغذائية لخطة وجباتك",
+       "eatTrainOptimumHealth" :
+          "أكل وتدريب من أجل الصحة المثلى",
+       "buildYourStrengthMuscles" :
+          "ابنِ قوتك وعضلاتك",
+       "getLeanerImproveFitness" :
+          "احصل على رشاقة وحسّن لياقتك",
+            "Vegetarian" : "نباتي"
 }
