home screen done

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -101,5 +101,37 @@
    "eatTrainOptimumHealth": "Eat and train for optimum health",
    "buildYourStrengthMuscles": "Build your strength and muscles",
    "getLeanerImproveFitness": "Get Leaner and improve your fitness",
-   "Vegetarian": "Vegetarian"
+   "Vegetarian": "Vegetarian",
+   "Dashboard": "Dashboard",
+   "myPlans": "My Plans",
+   "Newsfeed": "Newsfeed",
+   "Stores": "Stores",
+   "More": "More",
+   "LowCarb": "Low Carb",
+   "Carbohydrates": "Carbohydrates",
+   "Sugar": "Sugar",
+   "Fiber": "Fiber",
+   "Products": "Products",
+   "PhysioStep": "PhysioStep",
+   "CardioStep": "CardioStep",
+   "CyclePlus": "CyclePlus",
+   "Last90days": "Last 90 days",
+   "Weight": "Weight",
+   "Active": "Active",
+   "Progress": "Progress",
+   "Premium": "Premium",
+   "PremiumFeatures": "Premium Features",
+   "MyProfile": "My Profile",
+   "MyPrograms": "My Programs",
+   "MyMealPlans": "My Meal Plans",
+   "RecipeList": "Recipe List",
+   "WorkoutRoutine": "Workout Routine",
+   "Nutrition": "Nutrition",
+   "eBooks": "eBooks",
+   "Settings": "Settings",
+   "Chat": "Chat",
+   "Help": "Help",
+   "Logout": "Logout"
+
+
 }
