--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -101,5 +101,35 @@
    "FromMyfriend": "من صديقتي",
    "OnTV": "على التلفاز",
    "Ontheradio": "على الراديو",
-   "Other": "آخر"
+   "Other": "آخر",
+   "Dashboard": "لوحة القيادة",
+   "myPlans": "خططي",
+   "Newsfeed": "موجز الأخبار",
+   "Stores": "المتاجر",
+   "More": "أكثر",
+   "LowCarb": "منخفض الكربوهيدرات",
+   "Carbohydrates": "الكربوهيدرات",
+   "Sugar": "سكر",
+   "Fiber": "الأساسية",
+   "Products": "منتجات",
+   "PhysioStep": "فيزيستيب",
+   "CardioStep": "القلب",
+   "CyclePlus": "دورة CyclePlus",
+   "Last90days": "آخر 90 يومًا",
+   "Weight": "وزن",
+   "Active": "نشيط",
+   "Progress": "تقدم",
+   "Premium": "غالي",
+   "PremiumFeatures": "العضوية المميزة",
+   "MyProfile": "ملفي",
+   "MyPrograms": "برامجي",
+   "MyMealPlans": "خطط وجباتي",
+   "RecipeList": "قائمة الوصفات",
+   "WorkoutRoutine": "روتين تجريب",
+   "Nutrition": "تَغذِيَة",
+   "eBooks": "كتب إلكترونية",
+   "Settings": "إعدادات",
+   "Chat": "محادثة",
+   "Help": "يساعد",
+   "Logout": "تسجيل خروج"
 }
